--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "ky": "^1.2.4",
     "react": "18.2.0",
     "react-i18next": "^14.1.0",
-    "react-native": "0.74.1",
+    "react-native": "^0.74.1",
     "react-native-gesture-handler": "^2.16.0",
     "react-native-mmkv": "^2.12.2",
     "react-native-reanimated": "^3.9.0-rc.1",
